[tool.poetry]
name = "biliarchiver"
version = "0.0.37"
description = ""
authors = ["yzqzss <yzqzss@yandex.com>"]
readme = "README.md"
packages = [{ include = "biliarchiver" }]

[tool.poetry.dependencies]
python = "^3.9"
bilix = "0.18.4"
internetarchive = "^3.5.0"
danmakuc = "^0.3.6"
browser-cookie3 = "^0.19.1"
click = "^8.1.6"
click-option-group = "^0.5.6"

[tool.poetry.scripts]
biliarchiver = "biliarchiver.cli_tools.biliarchiver:biliarchiver"

[tool.ruff]
ignore = ['E501']
select = ["E", "F"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
