[tool.poetry]
name = "biliarchiver"
version = "0.1.0"
description = ""
authors = ["yzqzss <yzqzss@yandex.com>"]
readme = "README.md"
packages = [{ include = "biliarchiver" }]

[tool.poetry.dependencies]
python = "^3.9"
bilix = "0.18.4"
internetarchive = "^3.5.0"
danmakuc = "^0.3.6"
browser-cookie3 = "^0.19.1"
click = "^8.1.6"
click-option-group = "^0.5.6"

[tool.poetry.scripts]
biliarchiver = "biliarchiver.cli_tools.biliarchiver:biliarchiver"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
select = ["E9", "F63", "F7", "F82"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".git",
    ".git-rewrite",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".js",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 127

# Assume Python 3.8
target-version = "py39"

[tool.ruff.mccabe]
# McCabe complexity (`C901`) by default.
# Flag errors whenever the complexity level exceeds 10.
max-complexity = 10
